# ctxd

./: .gitignore  CHANGELOG.md  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml  release-bump-homebrew.yml
Formula/: ctxd.rb
scripts/: bench.sh
skills/ctxd/: SKILL.md
src/ctxd/: __init__.py  auth.py  cli.py  concurrency.py  download_limits.py  http_retry.py  obsidian.py  profiling.py  recurse.py  router.py  sanitize.py  summary.py
src/ctxd/confluence/: __init__.py  api_client.py  converter.py  downloader.py  url_parser.py
src/ctxd/dumpers/: __init__.py  base.py  confluence.py  github_pr.py  jira.py  slack.py
src/ctxd/formatters/: markdown.py  text.py
src/ctxd/jira/: __init__.py  api_client.py  converter.py  url_parser.py
tests/: test_auth.py  test_cli_auto_output.py  test_cli_auto_quiet.py  test_cli_confluence_flags.py  test_cli_obsidian.py  test_cli_order.py  test_confluence.py  test_doc_consistency.py  test_dumpers_obsidian.py  test_github_pr.py  test_github_pr_diff.py  test_github_pr_transform.py  test_jira.py  test_never_silent.py  test_obsidian.py  test_p1.py  test_p1_blocking.py  test_p1_effective.py  test_real_paths.py  test_recurse.py  test_router.py  test_slack.py  test_summary.py  test_summary_integration.py
